added updateOperativeEmail